objects/tfn_Species__c.object
<CustomObject>
    <fields>
        <fullName>tfn_Abundance_Scale__c</fullName>
        <label>Abundance Scale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;  1% projective foliage, few individuals</fullName>
                </value>
                <value>
                    <fullName>1-5% projective foliage cover or &lt;  1% many individuals</fullName>
                </value>
                <value>
                    <fullName>26-50% projective foliage cover</fullName>
                </value>
                <value>
                    <fullName>51-75% projective foliage cover</fullName>
                </value>
                <value>
                    <fullName>5-25% projective foliage cover or &lt;  5% numerous individuals</fullName>
                </value>
                <value>
                    <fullName>76-100% projective foliage cover</fullName>
                </value>
                <value>
                    <fullName>Not Entered</fullName>
                </value>
                <value>
                    <fullName>Rare or solitary with negligible cover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tfn_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_All_Discipline_Codes__c</fullName>
        <label>All Discipline Codes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Authority__c</fullName>
        <label>Authority</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Common_Name_Synonym__c</fullName>
        <label>Common Name Synonym</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Common_Name__c</fullName>
        <label>Common Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_EPCB_Act_Status__c</fullName>
        <inlineHelpText>Threat status as defined for a species under the EPBC Act</inlineHelpText>
        <label>EPCB Act Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Extract_Date__c</fullName>
        <label>Extract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tfn_FFG_Act_Status__c</fullName>
        <inlineHelpText>Threat status as defined for a species under the Victorian FFG Act</inlineHelpText>
        <label>FFG Act Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Image_Library_Link__c</fullName>
        <description>Bowerbird Image Library Link</description>
        <label>Image Library Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>tfn_Inactive_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tfn_Last_Mod__c</fullName>
        <label>Last Mod</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Legacy_Spec_Number__c</fullName>
        <label>Legacy Spec Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Nvis_Growthform__c</fullName>
        <label>Nvis Growthform</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Origin__c</fullName>
        <label>Origin</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Primary_Discipline__c</fullName>
        <label>Primary Discipline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Print_Order_Number__c</fullName>
        <label>Print Order Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Restricted_Flag__c</fullName>
        <label>Restricted Flag</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Scientific_Name_Synonym__c</fullName>
        <label>Scientific Name Synonym</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tfn_Scientific_Name__c</fullName>
        <label>Scientific Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Short_Name__c</fullName>
        <label>Short Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Spec_Import_ID__c</fullName>
        <label>Spec Import ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Species_Type__c</fullName>
        <label>Species Type</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Taxon_ID__c</fullName>
        <label>Taxon ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Taxon_Type__c</fullName>
        <label>Taxon Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Treaties__c</fullName>
        <label>Treaties</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tfn_Victorian_Advisory_Status__c</fullName>
        <inlineHelpText>Threat status as defined for a species under the Victorian Rare or Threatened Species listing (DEWLP)</inlineHelpText>
        <label>Victorian Advisory Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Species</label>
    <nameField>
        <label>Species Scientific Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Species</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>